--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl@3.14.0/dist/tf-backend-webgl.min.js"></script>
     <!-- Pose Detection Model -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/pose-detection@2.1.3/dist/pose-detection.min.js"></script>
-
-    <script src="aframe.min.js"></script>
-    <script src="aframe-ar.js"></script>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="OpenCVJS.js"></script>
 
 
 
